Add user roles to jwt claims

--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
 HOST_PORT=3000
 APP_NAME=bff
+APP_ADDR=0.0.0.0:8080
 APP_VERSION=1.0.0
 DB_HOST=postgresdb
 DB_PORT=5432
 POSTGRES_USER=bff
 POSTGRES_PASSWORD=bff
 POSTGRES_NAME=postgres
+REDIS_HOST=redis
+REDIS_PORT=6379
