--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - POSTGRES_NAME=${POSTGRES_NAME}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - APP_ADDR=${APP_ADDR}
+      - REDIS_HOST=${REDIS_HOST}
 
   postgresdb:
     image: postgres:latest
@@ -36,6 +38,8 @@ services:
     restart: always
     ports:
       - '6379:6379'
+    environment:
+      - REDIS_HOST=${REDIS_HOST}
     networks:
       - traveler-network
     volumes:
